Update .gitignore to include additional sensitive files, modify package-lock.json to remove peer flags, and enhance Python test setup by integrating dotenv for environment variable management.

--- a/python-tests/requirements.txt
+++ b/python-tests/requirements.txt
@@ -1,5 +1,6 @@
 pytest>=7.0
 pytest-playwright>=0.4
 playwright>=1.40
+python-dotenv>=1.0
 # Install the local AccessFlow Python SDK wheel
 ../pythonSdk/accessflow_sdk-1.0.1-py3-none-any.whl
