--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # misc
 .DS_Store
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
@@ -25,5 +27,13 @@ yarn-error.log*
 # credentials and secrets (do not commit)
 accessflow-*.json
 accessflow-base64*.txt
+accessflow-base64.txt
+accessflow-base64-double.txt
+accessflow-rx44uhm7jf-5ed74cc3ce93.json
 artifact_token.txt
 *.pem
+*.key
+.pypirc
+credentials*.json
+secrets*.json
+*secrets*.json
