Enhance CI workflow by adding force reinstall of AccessFlow SDK in Python dependencies installation, and streamline API key retrieval in tests by removing legacy fallback for improved clarity.

--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -107,7 +107,9 @@ jobs:
 
       - name: Install Python dependencies
         working-directory: python-tests
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install --force-reinstall --no-deps ../pythonSdk/accessflow_sdk-1.0.1-py3-none-any.whl
 
       - name: Install Playwright Browsers (Python)
         run: python -m playwright install --with-deps chromium
