--- a/python-tests/requirements.txt
+++ b/python-tests/requirements.txt
@@ -3,4 +3,4 @@ pytest-playwright>=0.4
 playwright>=1.40
 python-dotenv>=1.0
 # Install the local AccessFlow Python SDK wheel
-../pythonSdk/accessflow_sdk-1.0.1-py3-none-any.whl
+../pythonSdk/accessflow_sdk-1.0.1-py3-none-any-prod.whl
