--- a/python-tests/requirements.txt
+++ b/python-tests/requirements.txt
@@ -2,5 +2,6 @@ pytest>=7.0
 pytest-playwright>=0.4
 playwright>=1.40
 python-dotenv>=1.0
-# Install the local AccessFlow Python SDK wheel
-../pythonSdk/accessflow_sdk-1.0.1+prod-py3-none-any.whl
+# Install the local AccessFlow Python SDK wheel (must be _prod build).
+# Run "pip install -r requirements.txt" from python-tests/ so this path resolves.
+../pythonSdk/accessflow_sdk-1.0.1_prod-py3-none-any.whl
