--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -19,62 +19,62 @@ permissions:
 
 jobs:
   # =====================================================================
-  # JS Lane — Playwright + AccessFlow Node SDK (commented out: only Python runs)
+  # JS Lane — Playwright + AccessFlow Node SDK
   # =====================================================================
-  # test-js:
-  #   name: JS Lane — Playwright Tests
-  #   runs-on: ubuntu-latest
-  #
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Setup Node.js 20.x
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20.x'
-  #         cache: 'npm'
-  #
-  #     - name: Install dependencies
-  #       run: npm ci
-  #
-  #     - name: Install Playwright Browsers
-  #       run: npx playwright install --with-deps chromium
-  #
-  #     - name: Build application
-  #       run: npm run build
-  #       env:
-  #         CI: true
-  #
-  #     - name: Run JS Playwright Tests
-  #       run: npm run test:e2e
-  #       env:
-  #         CI: true
-  #         AF_Node_Package_Key: ${{ secrets.AF_Node_Package_Key }}
-  #
-  #     - name: Upload Playwright Report
-  #       uses: actions/upload-artifact@v4
-  #       if: always()
-  #       with:
-  #         name: js-playwright-report
-  #         path: test-suite/playwright-report/
-  #         retention-days: 30
-  #
-  #     - name: Upload Test Results
-  #       uses: actions/upload-artifact@v4
-  #       if: always()
-  #       with:
-  #         name: js-test-results
-  #         path: test-suite/test-results/
-  #         retention-days: 30
-  #
-  #     - name: Upload Build Artifacts
-  #       if: success()
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: build-artifacts
-  #         path: build/
-  #         retention-days: 7
+  test-js:
+    name: JS Lane — Playwright Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Build application
+        run: npm run build
+        env:
+          CI: true
+
+      - name: Run JS Playwright Tests
+        run: npm run test:e2e
+        env:
+          CI: true
+          AF_Node_Package_Key: ${{ secrets.AF_Node_Package_Key }}
+
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: js-playwright-report
+          path: test-suite/playwright-report/
+          retention-days: 30
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: js-test-results
+          path: test-suite/test-results/
+          retention-days: 30
+
+      - name: Upload Build Artifacts
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: build/
+          retention-days: 7
 
   # =====================================================================
   # Python Lane — pytest-playwright + AccessFlow Python SDK
@@ -199,74 +199,74 @@ jobs:
           retention-days: 30
 
   # =====================================================================
-  # Java Lane — JUnit 5 + Playwright Java + AccessFlow Java SDK (commented out: only Python runs)
+  # Java Lane — JUnit 5 + Playwright Java + AccessFlow Java SDK
   # =====================================================================
-  # test-java:
-  #   name: Java Lane — Playwright Tests
-  #   runs-on: ubuntu-latest
-  #
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Setup Node.js 20.x
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20.x'
-  #         cache: 'npm'
-  #
-  #     - name: Install Node dependencies & build app
-  #       run: |
-  #         npm ci
-  #         npm run build
-  #       env:
-  #         CI: true
-  #
-  #     - name: Setup Java 17
-  #       uses: actions/setup-java@v4
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '17'
-  #         cache: 'maven'
-  #
-  #     - name: Install Playwright Browsers (Java)
-  #       working-directory: java-tests
-  #       run: mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps chromium"
-  #
-  #     - name: Start application server
-  #       run: npm start &
-  #       env:
-  #         BROWSER: none
-  #
-  #     - name: Wait for application
-  #       run: |
-  #         for i in $(seq 1 60); do
-  #           curl -sf http://localhost:3000 > /dev/null 2>&1 && echo "App ready!" && exit 0
-  #           sleep 1
-  #         done
-  #         echo "App did not start within 60 s" && exit 1
-  #
-  #     - name: Run Java Playwright Tests
-  #       working-directory: java-tests
-  #       run: mvn test -B
-  #       env:
-  #         CI: true
-  #         JAVA_ACCESSFLOW_SDK_TOKEN: ${{ secrets.JAVA_ACCESSFLOW_SDK_TOKEN }}
-  #
-  #     - name: Upload Java Test Results
-  #       uses: actions/upload-artifact@v4
-  #       if: always()
-  #       with:
-  #         name: java-test-results
-  #         path: java-tests/target/surefire-reports/
-  #         retention-days: 30
+  test-java:
+    name: Java Lane — Playwright Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install Node dependencies & build app
+        run: |
+          npm ci
+          npm run build
+        env:
+          CI: true
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
+
+      - name: Install Playwright Browsers (Java)
+        working-directory: java-tests
+        run: mvn exec:java -e -D exec.classpathScope=test -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps chromium"
+
+      - name: Start application server
+        run: npm start &
+        env:
+          BROWSER: none
+
+      - name: Wait for application
+        run: |
+          for i in $(seq 1 60); do
+            curl -sf http://localhost:3000 > /dev/null 2>&1 && echo "App ready!" && exit 0
+            sleep 1
+          done
+          echo "App did not start within 60 s" && exit 1
+
+      - name: Run Java Playwright Tests
+        working-directory: java-tests
+        run: mvn test -B
+        env:
+          CI: true
+          JAVA_ACCESSFLOW_SDK_TOKEN: ${{ secrets.JAVA_ACCESSFLOW_SDK_TOKEN }}
+
+      - name: Upload Java Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: java-test-results
+          path: java-tests/target/surefire-reports/
+          retention-days: 30
 
   # =====================================================================
   # Deploy
   # =====================================================================
   deploy:
     name: Deploy to GitHub Pages
-    needs: [test-python]
+    needs: [test-js, test-python, test-java]
     runs-on: ubuntu-latest
     # Deploy from main, master, develop, and dev branches
     if: |
@@ -391,7 +391,7 @@ jobs:
   # =====================================================================
   accessibility-summary:
     name: Accessibility Test Summary (All SDKs)
-    needs: [test-python]
+    needs: [test-js, test-python, test-java]
     runs-on: ubuntu-latest
     if: always()
 
